src/c/dynamics.h

/**
 * @}
 */

/**
 * Nonlinear vector function callback.
 * @param nvar Number of variables.
 * @param neqn Number of equations.
 * @param x Input variables.
 * @param f Output residual vector.
 */
typedef void (*c_vecfcn)(int nvar, int neqn, const double *x, double *f);
/**
 * @brief Iteration statistics returned by nonlinear solver routines.
 */
typedef struct {
    /**
     * True when convergence was detected from solution changes.
    */
    bool converge_on_chng;
    /**
     * True when convergence was detected from the function value.
    */
    bool converge_on_fcn;
    /**
     * True when convergence was detected from a zero difference.
    */
    bool converge_on_zero_diff;
    /**
     * Number of function evaluations.
    */
    int fcn_count;
    /**
     * Number of gradient evaluations.
    */
    int gradient_count;
    /**
     * Number of nonlinear iterations.
    */
    int iter_count;
    /**
     * Number of Jacobian evaluations.
    */
    int jacobian_count;
} c_iteration_behavior;
/**
 * @brief An orthonormal coordinate system.
 */
typedef struct 
{
    /**
     * Coordinate-system origin.
    */
    double origin[3];
    /**
     * First unit basis vector.
    */
    double i[3];
    /**
     * Second unit basis vector.
    */
    double j[3];
    /**
     * Third unit basis vector.
    */
    double k[3];
} c_coordinate_system;
/**
 * @brief One Denavit-Hartenberg parameter set.
 */
typedef struct
{
    /**
     * Link length parameter.
    */
    double link_length;
    /**
     * Link twist parameter.
    */
    double link_twist;
    /**
     * Link offset parameter.
    */
    double link_offset;
    /**
     * Joint angle parameter.
    */
    double joint_angle;
} c_dh_parameter_set;
/**
 * @brief A dynamically allocated Denavit-Hartenberg table.
 */
typedef struct
{
    /**
     * Number of parameter sets in the table.
    */
    int count;
    /**
     * Dynamically allocated parameter-set array.
    */
    c_dh_parameter_set *parameters;
} c_dh_table;
/**
 * Build the Denavit-Hartenberg x translation matrix.
 * @param a Translation distance.
 * @param T Output matrix.
 * @param ldt Leading dimension of T.
 */
void c_dh_translate_x(double a, double *T, int ldt);
/**
 * Build the Denavit-Hartenberg z translation matrix.
 * @param d Translation distance.
 * @param T Output matrix.
 * @param ldt Leading dimension of T.
 */
void c_dh_translate_z(double d, double *T, int ldt);
/**
 * Generate one joint Jacobian column.
 * @param d Joint position vector.
 * @param k Joint axis.
 * @param R Rotation matrix.
 * @param ldr Leading dimension of R.
 * @param jtype Joint type.
 * @param jvec Output six-vector.
 */
void c_jacobian_generating_vector(const double *d, const double *k, 
    const double *R, int ldr, int jtype, double jvec[6]);
/**
 * Solve a nonlinear inverse-kinematics problem.
 * @param njoints Number of joint variables.
 * @param neqn Number of equations.
 * @param mdl Residual callback.
 * @param qo Initial joint variables.
 * @param constraints Constraint values.
 * @param qmax Upper bounds.
 * @param qmin Lower bounds.
 * @param jvar Output joint variables.
 * @param resid Output residual.
 * @param ib Output iteration statistics.
 */
void c_solve_inverse_kinematics(int njoints, int neqn, const c_vecfcn mdl,
    const double *qo, const double *constraints, const double *qmax,
    const double *qmin, double *jvar, double *resid,
    c_iteration_behavior *ib);
/**
 * @}
 */

/**
 * @defgroup dynamics_serial Serial linkage operations
 * @{
 */
/**
 * Allocate a Denavit-Hartenberg table.
 * @param n Number of parameter sets.
 * @param tbl Table initialized by the routine.
 * @return Zero on success; nonzero on allocation failure.
 */
int c_alloc_dh_table(int n, c_dh_table *tbl);
/**
 * Define a link coordinate system from adjacent geometry.
 * @param xim1 Previous x direction.
 * @param zim1 Previous z direction.
 * @param zi Current z direction.
 * @param rim1 Previous origin.
 * @param ri Current origin.
 * @param csys Output coordinate system.
 */
void c_define_link_csys(const double xim1[3], const double zim1[3], 
    const double zi[3], const double rim1[3], const double ri[3],
    c_coordinate_system *csys);
/**
 * Define a coordinate system from basis vectors and origin.
 * @param i First basis vector.
 * @param j Second basis vector.
 * @param k Third basis vector.
 * @param o Origin.
 * @param csys Output coordinate system.
 */
void c_define_csys(const double i[3], const double j[3], const double k[3], 
    const double o[3], c_coordinate_system *csys);
/**
 * Build Denavit-Hartenberg parameters from coordinate systems.
 * @param n Number of systems.
 * @param csys Coordinate systems.
 * @param tbl Output table.
 */
void c_build_dh_table(int n, const c_coordinate_system *csys, c_dh_table *tbl);